codepkg/objects/Agency_Non_Suppression_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Agency_Non_Suppression_Personnel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency Non-Suppression Personnel</label>
        <referenceTo>Agency_Non_Suppression_Personnel__c</referenceTo>
        <relationshipLabel>Agency Non-Suppression Line Items</relationshipLabel>
        <relationshipName>Agency_Non_Suppression_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Classification_Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Classification Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Rate__c</fullName>
        <label>Current Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MOU_MOA_GBR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portal-to-Portal w/Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revised_Rate__c</fullName>
        <label>Salary Rate (ST)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Revised</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Agency Non-Suppression Line Item</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Agency Non-Suppression Personnel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agency Non-Suppression Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>